# cpp-init

./: .gitignore
2.C++Programming/: main.cpp  main1_PrintGeneric.cpp  main1_print_object.cpp  main2_loop_vector.cpp  main3_2d_matrix.cpp  main4_matrix_from_file.cpp  main5_matrix_to_file.cpp
C++ForProgrammers/1.Basics/: main.cpp
C++ForProgrammers/10.Pointer/: main.cpp
C++ForProgrammers/11.Classes/: main.cpp  mainConstructors.cpp  mainDestructors.cpp  mainThis.cpp
C++ForProgrammers/12.Overloading/: main.cpp  mainOperatorOverload.cpp
C++ForProgrammers/13.Templates/: main.cpp  mainClassTempate.cpp  mainTwoTemplates.cpp
C++ForProgrammers/14.Inheritance/: main.cpp  mainMultipleInheritance.cpp  mainVirtualMethod.cpp
C++OpenCV/: 1.checkForOpenCV.cpp  videoCaptureCanny.cpp  videocapture_camera.cpp
C++Programming/: main.hpp  main4_matrix_from_file.cpp  main5_matrix_to_file.cpp
Protobuf/: CMakeLists.txt  addressbook.pb.h  proto_read.cpp  proto_write.cpp
Protobuf/python_example/: addressbook.py  proto_read.py  proto_write.py
Protobuf_dataset/: CMakeLists.txt  FaceDataset.pbobjc.h  FaceDataset.pbobjc.m  dataset_golovan.h5  dataset_golovan.protobuf  dataset_read.cpp  dataset_targarien.h5  dataset_targarien.protobuf  face_dataset.pb.cc  face_dataset.pb.h
Protobuf_dataset/python_example/: dataset_read.py  dataset_write.py  dataset_write_from_h5.py  face_dataset.proto  face_dataset_pb2.py
STL/: 0.TODO  0.template.cpp  bitset.cpp  deque.cpp  map.cpp  pair.cpp  priority_queue.cpp  queue.cpp  set.cpp  stack.cpp  tuple.cpp  unordered_map.cpp  vector.cpp
(+22 files in other folders)
